# BeautyUI

./: CMakeLists.txt
.cmake/: InstallerScript.iss.in  version_exe.rc.in
example/: CMakeLists.txt  example.qrc  example_en_US.ts  example_zh_CN.ts
example/qml/: App.qml
example/qml/chart/: T_BarChart.qml  T_BubbleChart.qml  T_LineChart.qml  T_PieChart.qml  T_PolarAreaChart.qml  T_RadarChart.qml  T_ScatterChart.qml
example/qml/component/: CodeExpander.qml
example/qml/global/: GlobalModel.qml  ItemsFooter.qml  ItemsOriginal.qml
example/qml/page/: T_Acrylic.qml  T_Badge.qml  T_BeautyPro.qml  T_BreadcrumbBar.qml  T_Buttons.qml  T_CalendarPicker.qml  T_Captcha.qml  T_Carousel.qml  T_CheckBox.qml  T_Clip.qml  T_ColorPicker.qml  T_ComboBox.qml  T_CustomPlot.qml  T_DatePicker.qml  T_Dialog.qml  T_Expander.qml  T_FlipView.qml  T_GroupBox.qml  T_Home.qml  T_Icons.qml  T_Image.qml  T_InfoBar.qml  T_Menu.qml  (+31 more)
example/src/: main.cpp
src/: BAccentColor.cpp  BAccentColor.h  BApp.cpp  BApp.h  BCaptcha.cpp  BCaptcha.h  BColors.cpp  BColors.h  BFrameless.cpp  BFrameless.h  BHotkey.cpp  BHotkey.h  BIconDef.h  BQrCodeItem.cpp  BQrCodeItem.h  BRectangle.cpp  BRectangle.h  BTableModel.cpp  BTableModel.h  BTableSortProxyModel.cpp  BTableSortProxyModel.h  BTextStyle.cpp  BTextStyle.h  BTheme.cpp  BTheme.h  BTools.cpp  BTools.h  BTreeModel.cpp  BTreeModel.h  BWatermark.cpp  BWatermark.h  BeautyUI.cpp  BeautyUI.h  CMakeLists.txt  Def.h  beautyui_en_US.ts  beautyui_zh_CN.ts  beautyuiplugin.cpp  beautyuiplugin.h
src/.cmake/: version_dll.rc.in
src/qmlcustomplot/: qcustomplot.cpp
(+204 files in other folders)
